fix(footer): gap

--- a/src/components/global/footer/footer.scss
+++ b/src/components/global/footer/footer.scss
@@ -8,8 +8,8 @@
 .footer {
   display: flex;
   flex-direction: column;
-  gap: 0px 16px;
-  padding: 24px var(--kd-page-gutter);
+  gap: 16px;
+  padding: 24px 32px;
   border-radius: 8px;
   margin: 0 var(--kd-page-gutter) 8px;
   background: var(--kd-color-background-container-default);
